ヘッダーにPタグ

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,8 +11,8 @@
 <body>
   <header class="header">
     <div class="header__inner">
-      scssファイルの変更を検知しているか確認してみよう
-      テストテストテストテスト
+      <p>scssファイルの変更を検知しているか確認してみよう</p>
+      <p>テストテストテストテスト</p>
     </div>
   </header>
   <main>
