--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,7 @@
     <div class="header__inner">
       <p>scssファイルの変更を検知しているか確認してみよう</p>
       <p>テストテストテストテスト</p>
+      <p>テストテストテストテスト</p>
     </div>
   </header>
   <main>
